refactoring resource method for signin
