# src/api/router/users_routes/users.routes.ts
@@ -1,6 +1,5 @@
 import { Joi, Segments, celebrate } from 'celebrate'
 import { Router } from 'express'
-import { CreateSignInController } from 'src/api/controllers/users_controller/CreateSignInController'
 import { CreateUserController } from 'src/api/controllers/users_controller/CreateUserController'
 import { ListUsersController } from 'src/api/controllers/users_controller/ListUsersController'
 import { isAuthenticated } from 'src/api/middlewares/IsAuthenticatedUser'
@@ -10,11 +9,9 @@ const usersRouter = Router()
 
 const createUserController = container.resolve(CreateUserController)
 const listUsersController = container.resolve(ListUsersController)
-const createSignInController = container.resolve(CreateSignInController)
 
 usersRouter.post(
   '/create',
-  isAuthenticated,
   celebrate({
     [Segments.BODY]: {
       name: Joi.string().required(),
@@ -38,19 +35,6 @@ usersRouter.get(
   }),
   (request, response) => {
     return listUsersController.handler(request, response)
-  },
-)
-
-usersRouter.post(
-  '/signin',
-  celebrate({
-    [Segments.BODY]: {
-      email: Joi.string().email().required(),
-      password: Joi.string().required(),
-    },
-  }),
-  (request, response) => {
-    return createSignInController.handler(request, response)
   },
 )
 
